# miden-bridge-cli

./: .gitignore  .prettierignore  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  eslint.config.js
crates/web-client/: .npmrc  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
crates/web-client/js/: constants.js  index.js  wasm.js
crates/web-client/js/types/: index.d.ts
crates/web-client/js/workers/: web-client-methods-worker.js
crates/web-client/src/: account.rs  export.rs  helpers.rs  import.rs  lib.rs  mock.rs  new_account.rs  new_transactions.rs  notes.rs  sync.rs  transactions.rs
crates/web-client/src/models/: account.rs  account_builder.rs  account_component.rs  account_delta.rs  account_header.rs  account_id.rs  account_storage.rs  account_storage_delta.rs  address.rs  advice_inputs.rs  advice_map.rs  assembler.rs  asset_vault.rs  auth_secret_key.rs  basic_fungible_faucet_component.rs  consumable_note_record.rs  endpoint.rs  executed_transaction.rs  foreign_account.rs  fungible_asset.rs  fungible_asset_delta.rs  input_note.rs  input_note_record.rs  input_notes.rs  mod.rs  note.rs  note_assets.rs  note_details.rs  note_header.rs  note_id.rs  note_inclusion_proof.rs  note_metadata.rs  note_recipient.rs  note_script.rs  note_tag.rs  output_note.rs  (+21 more)
crates/web-client/test/: README.md  account.test.ts  address.test.ts  basic_fungible_faucet_component.test.ts  fpi.test.ts  global.test.d.ts  import.test.ts  import_export.test.ts  key.test.ts  mocha.global.setup.mjs  mockchain.test.ts  new_account.test.ts  new_transactions.test.ts  notes.test.ts  playwright.global.setup.ts  tags.test.ts  token_symbol.test.ts  transactions.test.ts  webClientTestUtils.ts
(+186 files in other folders)
