[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Web Client library that facilitates interaction with the Miden rollup"
documentation          = "https://docs.rs/miden-client-web/0.11.4"
edition.workspace      = true
keywords               = ["client", "miden", "wasm", "web"]
license.workspace      = true
name                   = "miden-client-web"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]

[lib]
crate-type = ["cdylib"]

[features]
testing = ["miden-client/testing"]

[dependencies]
# Workspace dependencies
miden-client = { default-features = false, features = [
  "idxdb",
  "testing",
  "web-tonic",
], path = "../rust-client", version = "0.11" }

# Miden dependencies
miden-bridge = { git = "https://github.com/arcane-finance-defi/miden-bridge-mono", branch = "feat/mixer", version = "0.1.0", default-features = false }
miden-lib     = { workspace = true }
miden-objects = { workspace = true }
# External dependencies
rand                 = { workspace = true }
serde-wasm-bindgen   = { version = "0.6" }
wasm-bindgen         = { features = ["serde-serialize"], version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }

[dev-dependencies]
miden-lib     = { default-features = false, features = ["testing"], workspace = true }
miden-objects = { default-features = false, features = ["testing"], workspace = true }
web-sys       = { features = ["console"], version = "0.3" }

[lints]
workspace = true
